--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>Lightshelf</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="node_modules/whatwg-fetch/fetch.js"></script>
   <link href='//fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./styles/normalize.css">
@@ -13,6 +12,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <script src="index.js"></script>
+  <script src="../index.js"></script>
 </body>
 </html>
